style1.css
html {
  scroll-behavior: smooth;
  scroll-padding-top: var(--scroll-paddaing, 50px);
}

.content-grid,
.full-width {
  display: grid;
  grid-template-columns: [full-width-start] .5fr [breakout-start] .5fr [content-start] 10fr [content-end] .5fr [breakout-end] .5fr [full-width-end];
}

.content-grid>*,
.full-width>* {
  grid-column: content;
}

.content-grid>.breakout {
  grid-column: breakout;
}

.content-grid>.full-width {
  grid-column: full-width;
}


html,
body {
  height: 100%;
  margin: 0;
}

/* 
main {
  scroll-snap-type: y mandatory;
  overflow-y: scroll;
} */
.boundary-indicator {
  background-color: red;
}

section {
  /* scroll-snap-align: start; */
  min-height: calc(100vh - 50px);
  border: red dashed 2px;
}

footer {
  padding: 0;
  margin: 0;
}

#btn-back-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  display: none;
}
#go-top {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: red; /* Set a background color */
  color: white; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 10px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

#go-top:hover {
  background-color: #555; /* Add a dark-grey background on hover */
}


h1 {
  color: rgb(143, 114, 85);
}

#map {
  margin-top: 16px;
  height: 400px;
  /* The height is 400 pixels */
  width: 60%;
  /* The width is the width of the web page */

}

.card {
  width: 80%;
  margin: 0 auto;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  background-color: #fff;
}



#services {
  /* min-height: 100%; */
}

.services-card{

}

#equipments{
  max-width: fit-content;
}

.equipment-img-top{
  height: auto;
  width: 18rem;
}

#clients {
  /* max-height: 100%; */
  background-color: #e5e5e5;
}

.clients-grid {
  display: grid;
  justify-items: center;
  gap: .25rem;
  grid-template-columns: repeat(4, minmax(100px, 1fr));
  grid-template-rows: 1fr 1fr 1fr;
}

.clients-grid-item {
  background-color: #ffffff;
  width: 100%;
  height: auto;
  padding: 20px;
  font-size: 30px;
  text-align: center;
  align-content: center;
}

#contact {
  /* background-color: #131211; */
  /* min-height: 100%; */
}

/* If the screen size is 1200px wide or more, set the font-size to 80px */
/* @media (min-width: 992px) {
  #about-us p{
    font-size: x-large;
  }
} */
/* If the screen size is smaller than 1200px, set the font-size to 80px */
/* @media (min-width: 600px) {
  #about-us p{
    font-size: 2vw;
  }
} */
/* If the screen size is smaller than 1200px, set the font-size to 80px */
/* @media (max-width: 349.98px) {
  #about-us p{
    font-size: 3vw;
  }
} */

.hero{
  height: 100svh;
}
.carousel {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: #cdcdcd;
}

.carousel-item .slide-image {
  width: 100%;
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
}

.carousel-item {
  position: absolute;
  width: 100%;
  height: 100%;
  border: none;
  top: 0;
  left: 100%;
}

.carousel-item.active {
  left: 0;
  transition: inherit 0.6s ease;
}

.carousel-item div {
  height: 100%;
}

/* The dots/bullets/indicators */
.dot {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active {
  background-color: #717171;
}

.hero {
  min-block-size: 100vh;
  /* block-size: 100dvh; */
  /* place-content: center; */
  text-align: center;
}

.hero-text {
  display: grid;
  position: relative;
  align-content: center;
  color: white;
  /* height: 100vh; */
  min-height: 100dvh;
}

.hero-button {
  position: end;
  margin: 10px auto;
  /* align-self: center; */
  /* justify-self: center; */
  /* display: inline-block; */
  padding: 10px 20px;
  font-size: .8em;
  text-decoration: none;
  color: #fff;
  background-color: rgb(128, 0, 0);
  border-radius: 15px;
  transition: background-color 0.3s ease-in-out;
}

.hero-button:hover {
  background-color: rgba(128, 0, 0, 0.849);
}

.overlay {
  border-image: fill 1 linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
}

.text-underline {
  text-decoration-color: #C69337;
  text-underline-offset: .5em;
  text-decoration-thickness: 5px;
}


/* -------------------------About Us ------------------------*/
#about-us {
  /* min-height: 100%; */
  /* min-height: calc(100svh - 50px); */
  position: relative;
}

.about-us-content {
  display: grid;
  grid-template-columns: 3fr 2fr;
  grid-template-areas: "text-content image-grid";
  gap: 50px;

}

.image-grid {
  display: grid;
  grid-auto-rows: 1fr;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    "imge2 imge1"
    "imge3 imge1";
  gap: .5rem;
}

.imge1 {
  background: red;
  grid-area: imge1;
  object-fit: cover;
}

.imge2 {
  background: green;
  grid-area: imge2;
  object-fit: cover;
}

.imge3 {
  background: blue;
  grid-area: imge3;
  object-fit: cover;
}

/* .about-us .contact-banner{
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: burlywood;
  width: 100%; /* Optional: makes the text span full width */
/* text-align: center; Optional: centers the text */
/* } */

/* Gallery Function related  */

.gallery-row {
  margin: 0px -0px;
}

/* Add padding BETWEEN each column (if you want) */
.gallery-row,
.gallery-row > .gallery-column {
  padding: 0px;
}

/* Create three equal columns that floats next to each other */
.gallery-column {
  float: left;
  width: 25%;
  display: none; /* Hide columns by default */
}

/* Clear floats after rows */
.gallery-row:after {
  content: "";
  display: table;
  clear: both;
}

/* The "show" class is added to the filtered elements */
.show {
  display: block;
}

/* Style the buttons */
.btn {
  border: none;
  outline: none;
  padding: 12px 16px;
  background-color: white;
  cursor: pointer;
}

/* Add a grey background color on mouse-over */
.btn:hover {
  background-color: #ddd;
}

/* Add a dark background color to the active button */
.btn.active {
  background-color: #666;
   color: white;
}

